workshop03/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  weatherappsvc
spec:
  selector:
    app:  weatherapp
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  3000
