workshop03/v1_myapp.yaml
---
kind: Deployment
apiVersion: apps/v1

metadata:
   name: myapp-deploy-v1
   namespace: myns
   labels:
      app.kubernetes.io/name: myapp-deploy-v1
      app.kubernetes.io/version: "v1"
      app.kubernetes.io/component: application
      app.kubernetes.io/part-of: mysuite

spec:
   replicas: 2
   selector:
      matchLabels:
         app.kubernetes.io/name: myapp-pod-v1

   minReadySeconds: 10
   template:
      metadata:
         name: myapp-pod-v1
         labels:
            app.kubernetes.io/name: myapp-pod-v1
      spec:
         containers:
         - name: myapp
           image: stackupiss/northwind-app:v1
           imagePullPolicy: Always
           ports:
           - name: app-port
             containerPort: 3000

           livenessProbe:
              periodSeconds: 60
              httpGet:
                 port: app-port
                 path: /health
           readinessProbe:
              periodSeconds: 60
              httpGet:
                 port: app-port
                 path: /ready

           resources:
              requests:
                 cpu: 100m
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 1
         maxUnavailable: 1

---
kind: Service
apiVersion: v1

metadata:
   name: myapp-svc-v1
   namespace: myns
   labels:
      app.kubernetes.io/name: mydb-svc-v1
      app.kubernetes.io/version: "v1"
      app.kubernetes.io/component: database-service
      app.kubernetes.io/part-of: mysuite

spec:
   type: ClusterIP
   selector:
      app.kubernetes.io/name: myapp-pod-v1
   ports:
   - port: 80
     targetPort: app-port
