workshop03/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weather-ingress
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts: 
    - weather.157.230.75.71.nip.io
    port:
      number: 80
      protocol: HTTP
      name: HTTP
