workshop03/myapp_ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
   name: myapp-ingress
   namespace: myns
   labels:
      app.kubernetes.io/name: myapp-ingress
      app.kubernetes.io/version: "v1"
      app.kubernetes.io/component: ingress
      app.kubernetes.io/part-of: mysuite
      
   #https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
   # https://github.com/nginxinc/kubernetes-ingress/blob/master/docs/configmap-and-annotations.md
   annotations:
      # rewrite-target: 
      #  https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md#rewrite-target
      # nginx.ingress.kubernetes.io/rewrite-target: /$2
      nginx.ingress.kubernetes.io/rewrite-target: /$2
      nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
   backend:
      serviceName: myapp-svc-v2
      servicePort: 80
   rules:
   - http:
        paths:
        - path: /v1(/|$)(.*)
          backend: 
            serviceName: myapp-svc-v1
            servicePort: 80
        - path: /v2(/|$)(.*)
          backend:
             serviceName: myapp-svc-v2
             servicePort: 80
